--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "serverless-nodejs",
   "version": "0.0.1",
   "main": "dist/index.js",
+  "type": "module",
   "bin": {
     "sl-nodejs": "dist/index.js"
   },
+  "types": "./src",
   "scripts": {
     "start": "node index.js",
     "build": "tsc",
@@ -20,9 +22,11 @@
     "@aws-sdk/client-lambda": "^3.680.0",
     "aws-sdk": "^2.1691.0",
     "fs": "^0.0.1-security",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "lowdb": "^7.0.1"
   },
   "devDependencies": {
+    "@sindresorhus/tsconfig": "^6.0.0",
     "@types/node": "^22.8.1",
     "esbuild": "^0.24.0",
     "typescript": "^5.6.3"
