--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,23 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false,
-    "outDir": "dist"
-  },
-  "exclude": [
-    "node_modules"
-  ]
-}
+    "compilerOptions": {
+      /* - - Base Options - - */
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "target": "es2022",
+      // "verbatimModuleSyntax": true,
+      "resolveJsonModule": true,
+      "moduleDetection": "force",
+      "forceConsistentCasingInFileNames": true,
+  
+      /* - - Strictness - - */
+      "strict": true,
+      "noUncheckedIndexedAccess": true,
+  
+      /* - - Node Options - - */
+      "moduleResolution": "NodeNext",
+      "module": "NodeNext",
+      "outDir": "./dist",
+      "sourceMap": true,
+      "lib": ["es2022"],
+    }
+  }
