--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: "18"
 
+      - name: Install angular cli
+        run: npm install -g @angular/cli
+
       - name: Install dependencies
         run: npm install
 
