--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node index.js",
+     "test:deploy": "npm run build && npm i -g . && cd example && sl-nodejs deploy",
+    "test:remove": "npm run build && npm i -g . && cd example && sl-nodejs remove",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
