--- a/package.json
+++ b/package.json
@@ -1,36 +1,60 @@
 {
   "name": "serverless-nodejs",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "index.js",
   "type": "module",
   "bin": {
     "sl-nodejs": "dist/index.js"
   },
-  "types": "./src",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "start": "node index.js",
-    "build": "tsc",
-    "test": " tsc & npm i -g .",
-    "test:deploy": " tsc & npm i -g . & cd example & sl-nodejs deploy",
-    "test:remove": " tsc & npm i -g . & cd example & sl-nodejs remove"
+    "start": "node dist/index.js",
+    "build": "npx tsc",
+    "test": "npm run build && npm i -g .",
+    "test:deploy": "npm run build && npm i -g . && cd example && sl-nodejs deploy",
+    "test:remove": "npm run build && npm i -g . && cd example && sl-nodejs remove"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "serverless",
+    "lambda",
+    "aws-lambda",
+    "serverless-nodejs",
+    "nodejs",
+    "lambda-function",
+    "aws",
+    "typescript",
+    "cloud-functions"
+  ],
+  "author": "Gopi <gopi2401coc@gmail.com>",
+  "license": "MIT",
+  "description": "A lightweight Node.js package for building and deploying serverless applications with AWS Lambda.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gopi2401/serverless-nodejs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gopi2401/serverless-nodejs/issues"
+  },
+  "homepage": "https://github.com/gopi2401/serverless-nodejs#readme",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE",
+    "package.json"
+  ],
   "dependencies": {
-    "@aws-sdk/client-iam": "^3.679.0",
+    "@aws-sdk/client-iam": "^3.308.0",
     "@aws-sdk/client-lambda": "^3.680.0",
-    "aws-sdk": "^2.1691.0",
-    "fs": "^0.0.1-security",
+    "aws-sdk": "^2.1452.0",
     "jszip": "^3.10.1",
     "lowdb": "^7.0.1",
     "ora": "^8.1.1"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^6.0.0",
-    "@types/node": "^22.8.1",
-    "esbuild": "^0.24.0",
+    "@types/cli-table": "^0.3.4",
+    "@types/node": "^20.6.0",
+    "esbuild": "^0.19.0",
     "typescript": "^5.6.3"
   }
 }
